Стилизация блоков с преимуществами и услугами

--- a/source/index.html
+++ b/source/index.html
@@ -30,7 +30,7 @@
         <h1 class="visually-hidden">«NikAlex Media» - продвижение в социальных сетях.</h1>
 
         <section class="features">
-          <h2 class="features__title">Наши преимущества</h2>
+          <h2 class="features__title section-title">Наши преимущества</h2>
           <ul class="features__list">
             <li class="features__item">
               <p>Разумные цены и высокая эффективность</p>
@@ -51,15 +51,15 @@
         </section>
 
         <section class="services" id="our_services">
-          <h2 class="services__title">Услуги</h2>
+          <h2 class="services__title section-title">Услуги</h2>
           <ul class="services__list">
             <li class="services__item">
-              <img class="services__image" src="#" alt="">
-              <p>Создание как бизнес, так и личных аккаунтов. Продвижение с помощью таргетированной рекламы, рекламы у блогеров, коллаборации
-                 с блогерами, участие в Giveaway, проведение розыгрышей и многие другие методы, максимальных охват целевой аудитории.</p>
+              <img class="services__image" src="img/instagram-icon.png" alt="">
+              <p>Создание как бизнес, так и личных аккаунтов. <br>Продвижение с помощью таргетированной рекламы, рекламы у блогеров, коллаборации
+                 с блогерами, участие в Giveaway, проведение розыгрышей и многие другие методы, максимальный охват целевой аудитории.</p>
             </li>
             <li class="services__item">
-              <img class="services__image" src="#" alt="">
+              <img class="services__image" src="img/facebook-icon.png" alt="">
               <p>Создание бизнес страницы, разработка контент плана, ведение и наполнение информацией, продвижение с помощью популярных методов.</p>
             </li>
             <li class="services__item">
