Оптимизация проекта, настройка автоматизации

--- a/source/index.html
+++ b/source/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <title>NikAlex Media - Лучшее SMM продвижение</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta name="description" content="NikAlex Media - лучшее SMM продвижение в социальных сетях. Создание бизнес страниц, разработка контент плана, ведение и наполнение информацией, продвижение с помощью популярных методов, максимальный охват аудитории.">
+    <meta name="keywords" content="Продвижение, SMM, продвижение в социальных сетях, создание бизнес страниц, ведение аккаунта, канал, создание канала, смм, заказать smm продвижение, видеосъемка, монтаж.">
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
@@ -77,19 +79,16 @@
           <h2 class="services__title section-title">Услуги</h2>
           <ul class="services__list">
             <li class="services__item">
-              <p>Создание как бизнес, так и личных аккаунтов. <br>Продвижение с помощью таргетированной рекламы, рекламы у блогеров, коллаборации
-                 с блогерами, участие в Giveaway, проведение розыгрышей и многие другие методы, максимальный охват целевой аудитории.</p>
+              <p>Создание как бизнес, так и личных аккаунтов. <br>Продвижение с помощью таргетированной рекламы, рекламы у блогеров, коллаборации с блогерами, участие в Giveaway, проведение розыгрышей и многие другие методы, максимальный охват целевой аудитории.</p>
             </li>
             <li class="services__item services__item--facebook">
               <p>Создание бизнес страницы, разработка контент плана, ведение и наполнение информацией, продвижение с помощью популярных методов.</p>
             </li>
             <li class="services__item services__item--vk">
-              <p>Создание и ведение группы/публичной страницы, разработка контент плана, реклама в тематических сообществах, таргетированная
-                 реклама, проведение розыгрышей, максимальных охват вашей целевой аудитории.</p>
+              <p>Создание и ведение группы/публичной страницы, разработка контент плана, реклама в тематических сообществах, таргетированная реклама, проведение розыгрышей, максимальных охват вашей целевой аудитории.</p>
             </li>
             <li class="services__item services__item--youtube">
-              <p>Создание канала, съемка видео роликов, монтаж, подбор ключевых слов для вывода в топ, реклама, коллаборации с блогерами и
-                 многое другое.</p>
+              <p>Создание канала, съемка видео роликов, монтаж, подбор ключевых слов для вывода в топ, реклама, коллаборации с блогерами и многое другое.</p>
             </li>
             <li class="services__item services__item--camera">
               <p>Профессиональная съемка видео, рекламных роликов, корпоративов и т.д.</p>
@@ -113,6 +112,7 @@
         <p>г. Москва</p>
         <p>тел. +7(927)972-51-24</p>
         <p><a href="mailto:nikalex-media@mail.ru">nikalex-media@mail.ru</a></p>
+        <p class="page-footer__developer">2019 г. Разработка сайта: <a href="https://www.instagram.com/ilove.c.o.d.e/" target="_blank">Наталья Макарова.</a></p>
       </footer>
 
     </div>
